# tools

email/: .gitignore  README.md  cli.py  convert.py
openrouter_helper/: LICENSE  README.md  USAGE_GUIDE.md  pyproject.toml
openrouter_helper/examples/: basic_usage.py  nl_query_usage.py
openrouter_helper/src/openrouter_helper/: __init__.py  client.py  models.py  nl_interface.py  query.py
openrouter_helper/tests/: test_basic.py  verify_import.py
react-template/src/: App.tsx  index.css  index.html
